[workspace]
resolver = "2"
members = ["chapter-1/hello-world","chapter-2/guessing-game","chapter-3/variables", "chapter-3/data-types", "chapter-3/functions" , "chapter-3/comments", "chapter-3/control-flow", "chapter-3/extra-credit/temperature-converter", "chapter-3/extra-credit/fibonacci", "chapter-3/extra-credit/twelve-days-of-christmas", "chapter-4/ownership", "chapter-4/references-and-borrowing", "chapter-4/slice", "chapter-5/defining-structs", "chapter-5/rectangles", "chapter-5/rectangles_tuples", "chapter-5/rectangles_structs", "chapter-5/methods", "chapter-6/match-control-flow"]
